plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id 'application'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

dependencies {
    implementation(fileTree("../libs") { include("*.jar") })
    implementation project (path: ':module-ui', configuration: 'shadow')
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    implementation project(':module-api')
}

application {
    mainClass = 'com.szadowsz.nds4j.app.Main'
}